@@ -24,6 +24,7 @@
 @Type{cjk-ideograph-ExtG-1000, field = {𰀀𰀁𰀂𰀃𰀄𰀅𰀆𰀇}, }
 @Type{cjk-ideograph-ExtH-1000, field = {𱍐𱍑𱍒𱍓𱍔𱍕𱍖𱍗}, }
 @Type{cjk-ideograph-ExtI-1000, field = {𮯰𮯱𮯲𮯳𮯴𮯵𮯶𮯷}, }
+@Type{cjk-ideograph-ExtJ-1000, field = {𲎰𲎱𲎲𲎳𲎴𲎵𲎶𲎷}, }
 
 @Type{hangul-1000, field = {가나다라마한글텍}, }
 
